argocd/applications/proompteng/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proompteng
  namespace: proompteng
spec:
  selector:
    matchLabels:
      app: proompteng
  template:
    metadata:
      labels:
        app: proompteng
    spec:
      containers:
        - name: proompteng
          image: registry.ide-newton.ts.net/lab/proompteng
          resources:
            limits:
              cpu: "1"
              memory: "512Mi"
            requests:
              cpu: "200m"
              memory: "256Mi"
          ports:
            - containerPort: 3000
