argocd/applications/proompteng/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proompteng
  namespace: proompteng
spec:
  selector:
    app: proompteng
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
