argocd/applications/proompteng/ingress.yaml
apiVersion: traefik.us/v1alpha1
kind: IngressRoute
metadata:
  name: proompteng
  namespace: proompteng
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`proompteng.ai`)
      services:
        - name: proompteng
          port: 80
  tls:
    certResolver: default
