argocd/applications/proompteng/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: proompteng
  namespace: proompteng
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`proompteng.ai`)
      services:
        - name: proompteng
          port: 80
